# BeagleQueue

./: .gitignore  CMakeLists.txt  EventQueue.cbp  Readme.md  libEventQueue.dylib
cmake/: FindPoco.cmake
include/: Event.h  EventType.h  MessageQueue.h  QueueEventEnum.h  Router.h
src/: Event.cpp  MessageQueue.cpp  Router.cpp
